--- a/HelloWorld/manifest.json
+++ b/HelloWorld/manifest.json
@@ -12,6 +12,9 @@
     "browser_action": {
         "default_icon": "./image/logo.png",
         "default_popup": "popup.html"
-    }
+    },
+    "permissions":[
+        "notifications"
+    ]
 
 }
